{
    "name": "GlobalInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "afbd29d7-41d7-4064-bbc1-48311c7ea9f5",
            "actions": [
                {
                    "name": "PanCamera",
                    "type": "Value",
                    "id": "6f82af56-37b2-4dff-bbbb-ef8bffd6c618",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EnablePanCamera",
                    "type": "Button",
                    "id": "a565aa7b-2af3-4863-9ae9-48c374f258a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "9fdf3480-b5b1-455d-bb6a-de8d9161e723",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EnableRotateCamera",
                    "type": "Button",
                    "id": "bfd4be2d-bc01-421f-9e21-edb2ed445406",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ZoomCamera",
                    "type": "Value",
                    "id": "9d4d733e-8975-415c-a761-31d2e9ae2864",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "5f055d9c-d6aa-47e8-8f8c-a346060a40e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e7c87b19-eab7-4e57-9422-e80206ee1a17",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90e7b04d-4b53-44fd-86fc-bd950c1389cb",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnablePanCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "957edb37-347a-48cf-aece-a590ac416471",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b407c3fc-87fd-494c-9db9-1ece29276598",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnableRotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeede94d-88cb-42e0-a103-a9ea43fe3d23",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bb53e4b-e894-4704-9d9c-5e5889721e9a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}